cedar-lean-cli/tests/snapshots/integration_tests__analyze_compare_tabular_sets5b.snap
---
source: tests/integration_tests.rs
expression: "cmd_output(&mut\ncargo::cargo_bin_cmd!().current_dir(\"examples/analyze/sets\").arg(\"analyze\").arg(\"compare\").arg(\"src5.cedar\").arg(\"tgt5b.cedar\").arg(\"policies.cedarschema\"),\nfalse,)"
---
+---------------+------------+--------------+---------------------------------------------------------------------------+
| PrincipalType | ActionName | ResourceType | Result                                                                    |
+---------------+------------+--------------+---------------------------------------------------------------------------+
| User          | view       | Thing        | pset1 is more permissive than pset2                                       |
|               |            |              | Example: principal: User::"", action: Action::"view", resource: Thing::"" |
|               |            |              | context: {                                                                |
|               |            |              |   n1: 0,                                                                  |
|               |            |              |   n2: 0,                                                                  |
|               |            |              |   ns: [],                                                                 |
|               |            |              |   thing1: Thing::"",                                                      |
|               |            |              |   thing2: Thing::"A",                                                     |
|               |            |              |   thing3: Thing::"B",                                                     |
|               |            |              |   things: [Thing::"C"],                                                   |
|               |            |              |   things1: [Thing::""],                                                   |
|               |            |              |   things2: [Thing::"A"],                                                  |
|               |            |              |   user1: User::"",                                                        |
|               |            |              |   user2: User::"A",                                                       |
|               |            |              |   users: [],                                                              |
|               |            |              | }                                                                         |
|               |            |              | entities: [                                                               |
|               |            |              |   Action::"view",                                                         |
|               |            |              |   Thing::"" in [Thing::"C"],                                              |
|               |            |              |   Thing::"A",                                                             |
|               |            |              |   Thing::"B",                                                             |
|               |            |              |   Thing::"C",                                                             |
|               |            |              |   User::"",                                                               |
|               |            |              |   User::"A",                                                              |
|               |            |              | ]                                                                         |
+---------------+------------+--------------+---------------------------------------------------------------------------+
