cedar-lean-cli/tests/snapshots/integration_tests__analyze_compare_tabular_sets6.snap
---
source: tests/integration_tests.rs
expression: "cmd_output(&mut\ncargo::cargo_bin_cmd!().current_dir(\"examples/analyze/sets\").arg(\"analyze\").arg(\"compare\").arg(\"src6.cedar\").arg(\"tgt6.cedar\").arg(\"policies.cedarschema\"),\nfalse,)"
---
+---------------+------------+--------------+-------------------------------------+
| PrincipalType | ActionName | ResourceType | Result                              |
+---------------+------------+--------------+-------------------------------------+
| User          | view       | Thing        | pset1 is more permissive than pset2 |
+---------------+------------+--------------+-------------------------------------+
