cedar-lean-cli/tests/snapshots/integration_tests__analyze_compare_tabular_tags_bool.snap
---
source: tests/integration_tests.rs
expression: "cmd_output(&mut\ncargo::cargo_bin_cmd!().current_dir(\"examples/analyze/tags\").arg(\"analyze\").arg(\"compare\").arg(\"policies1.cedar\").arg(\"empty.cedar\").arg(\"policies.cedarschema\"),\nfalse,)"
---
+---------------+------------+--------------+------------------------------------------------------------------------------+
| PrincipalType | ActionName | ResourceType | Result                                                                       |
+---------------+------------+--------------+------------------------------------------------------------------------------+
| User          | view       | Document     | pset1 is more permissive than pset2                                          |
|               |            |              | Example: principal: User::"", action: Action::"view", resource: Document::"" |
|               |            |              | entities: [                                                                  |
|               |            |              |   Action::"view",                                                            |
|               |            |              |   Document::"" tags {                                                        |
|               |            |              |     internal: false,                                                         |
|               |            |              |     public: true,                                                            |
|               |            |              |   },                                                                         |
|               |            |              |   User::"",                                                                  |
|               |            |              | ]                                                                            |
+---------------+------------+--------------+------------------------------------------------------------------------------+
